public/stylesheets/application.css
/*** Reset ***/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
  font-size:62.5%;
}
body, form input, form button{
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}
a{
  color:#007828;
}
ol, ul {
  list-style: none;
}

/*** Style ***/

/*** Colors
 *
 * green: #007828;
 * dark green: #075220;
 * light green: #1D9E48;
 * red: #9E0601;
 * dark red: #520907;
 *
 ***/

/*** Header ***/
header {
  width:90%;
  padding:10px 5%;
  background: #007828;
  background: -moz-linear-gradient(top,  #007828 0%, #075220 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#007828), color-stop(100%,#075220));
  background: -webkit-linear-gradient(top,  #007828 0%,#075220 100%);
  background: -o-linear-gradient(top,  #007828 0%,#075220 100%);
  background: -ms-linear-gradient(top,  #007828 0%,#075220 100%);
  background: linear-gradient(top,  #007828 0%,#075220 100%);
}
header h1{
  margin: 0 auto;
  font-size:2.4em;
  color:#fff;
  text-align:center;
  font-family: "Arial Black", sans-serif;
  text-shadow:1px 1px 0 #075220;
}

/*** Main ***/
section{
  margin: 0 auto;
}
section form.search{
  display: block;
  width:90%;
  padding:10px 5%;
  text-align:center;
  border-bottom:1px solid #ccc;
  background-color: #fff;
}
section form.search input{
  width:80%;
  font-size:1.6em;
  color:#333;
}
section div.tracks{
  min-height:100px
}
section ol li{
  width:90%;
  padding:0.8em 5%;
  border-bottom:1px solid #CCC;
  clear:both;
  position: relative;
}
section ol li:last-child{
  border:none;
}
section ol li h2{
  font-size:1.6em;
  margin-bottom:0;
}
section ol li p{
  font-size:14px;
  font-weight:bold;
}
section ol li form{
  position: absolute;
  top:0.8em;
  right:5%;
}
section ol li form{
  padding:0;
  display: block;
  height:3em;
  width:3em;
  border:none;
  border-radius:100px;
  background:#007828 none;
  line-height:1;
}
section ol li form button{
  border:none;
  background:transparent none;
  font-size:2em;
  font-weight:bold;
  color:#fff;
}
section ol li form p{
  font-size:2em;
  color:#fff;
  width:1.5em;
  height:1.5em;
  line-height:1.3;
  text-align:center;
}

/*** Footer ***/
footer{
  width:90%;
  padding:0.4em 5%;
  height:4em;
  border-top:1px solid #ccc;
  background-color:#fff;
}
footer p{
  font-size:1.4em;
  line-height:2.5;
  color:#555;
}

/*** Alerts ***/
.alert {
  padding: 15px 35px 14px 14px;
  width: 100%;
  margin: 0 auto;
  text-align: center;
  font-size: 1.5em;
  font-weight: bold;
  text-shadow: 0 1px 0 rgba(255,255,255,.5);
  color: #000;
  position: fixed;
  top:0;
  left:0;
  z-index:10;
}

.error {
  background: #cf0404;
  background: -moz-linear-gradient(top,  #cf0404 0%, #ff3019 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cf0404), color-stop(100%,#ff3019));
  background: -webkit-linear-gradient(top,  #cf0404 0%,#ff3019 100%);
  background: -o-linear-gradient(top,  #cf0404 0%,#ff3019 100%);
  background: -ms-linear-gradient(top,  #cf0404 0%,#ff3019 100%);
  background: linear-gradient(top,  #cf0404 0%,#ff3019 100%);
}
.notice{
  background: #f1da36;
  background: -moz-linear-gradient(top,  #f1da36 0%, #fefcea 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f1da36), color-stop(100%,#fefcea));
  background: -webkit-linear-gradient(top,  #f1da36 0%,#fefcea 100%);
  background: -o-linear-gradient(top,  #f1da36 0%,#fefcea 100%);
  background: -ms-linear-gradient(top,  #f1da36 0%,#fefcea 100%);
  background: linear-gradient(top,  #f1da36 0%,#fefcea 100%);
}

